<project xmlns="http://maven.apache.org/POM/4.0.0"
        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
        <modelVersion>4.0.0</modelVersion>

        <groupId>org.little</groupId>
        <artifactId>little</artifactId>
        <version>20210204-DIONIS</version>
        <packaging>jar</packaging>

        <properties>
                <maven.compiler.source>8</maven.compiler.source>
                <maven.compiler.target>8</maven.compiler.target>
                <netty.version>4.1.58.Final</netty.version>
        </properties>

        <build>
          <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M5</version>

                <configuration>
                    <argLine>-Xmx1g -XX:MaxPermSize=256m</argLine>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                    <!--<compilerArgs>-->
                        <!--<arg>-Xlint:all</arg>-->
                        <!--<arg>-Werror</arg>-->
                    <!--</compilerArgs>-->
                    <showWarnings>true</showWarnings>
                    <showDeprecation>true</showDeprecation>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.2.0</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.4</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <shadedArtifactAttached>true</shadedArtifactAttached>
                            <shadedClassifierName>little-shade</shadedClassifierName>
                            <artifactSet>
                                <excludes>
                                    <exclude>org.bouncycastle:*</exclude>
                                </excludes>
                            </artifactSet>

                            <filters>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>META-INF/*.SF</exclude>
                                        <exclude>META-INF/*.DSA</exclude>
                                        <exclude>META-INF/*.RSA</exclude>
                                    </excludes>
                                </filter>
                            </filters>

                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <manifestEntries>
                                        <Main-Class>org.little.wrapper.wrapper</Main-Class>
                                    </manifestEntries>
                                </transformer>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.IncludeResourceTransformer">
                                    <resource>log4j.xml</resource>
                                    <file>src/main/config/log4j.xml</file>
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>



          </plugins>

        </build>

        <dependencies>

           <dependency>
               <groupId>com.jcraft</groupId>
               <artifactId>jsch</artifactId>
               <version>0.1.55</version>
           </dependency>
           
           <dependency>
		<groupId>jcifs</groupId>
		<artifactId>jcifs</artifactId>
		<version>1.3.17</version>
           </dependency>
           
           <dependency>
               <groupId>org.apache.commons</groupId>
               <artifactId>commons-lang3</artifactId>
               <version>3.11</version>
           </dependency>

           <dependency>
               <groupId>jakarta.mail</groupId>
               <artifactId>jakarta.mail-api</artifactId>
               <version>1.6.5</version>
           </dependency>
           <dependency>
               <groupId>com.sun.mail</groupId>
               <artifactId>jakarta.mail</artifactId>
               <version>1.6.5</version>
           </dependency>
           <dependency>
               <groupId>commons-cli</groupId>
               <artifactId>commons-cli</artifactId>
               <version>1.4</version>
           </dependency>
           <dependency>
               <groupId>log4j</groupId>
               <artifactId>log4j</artifactId>
               <version>1.2.17</version>
               <optional>true</optional>
           </dependency>
           <dependency>
               <groupId>org.slf4j</groupId>
               <artifactId>slf4j-log4j12</artifactId>
               <version>1.7.30</version>
               <optional>true</optional>
           </dependency>
           <dependency>
               <groupId>org.slf4j</groupId>
               <artifactId>slf4j-api</artifactId>
               <version>1.7.30</version>
           </dependency>


           <dependency>
               <groupId>org.apache.httpcomponents</groupId>
               <artifactId>httpclient</artifactId>
               <version>4.5.12</version>
           </dependency>
           <dependency>
              <groupId>org.apache.httpcomponents</groupId>
              <artifactId>httpcore</artifactId>
              <version>4.4.13</version>
           </dependency>
           <dependency>
              <groupId>org.apache.httpcomponents</groupId>
              <artifactId>httpmime</artifactId>
              <version>4.5.12</version>
           </dependency>

           <dependency>
                   <groupId>io.netty</groupId>
                   <artifactId>netty-buffer</artifactId>
                   <version>${netty.version}</version>
           </dependency>
           <dependency>
                   <groupId>io.netty</groupId>
                   <artifactId>netty-build</artifactId>
                   <version>26</version>
           </dependency>
           <dependency>
                   <groupId>io.netty</groupId>
                   <artifactId>netty-common</artifactId>
                   <version>${netty.version}</version>
           </dependency>
           <dependency>
                   <groupId>io.netty</groupId>
                   <artifactId>netty-handler</artifactId>
                   <version>${netty.version}</version>
           </dependency>
           <dependency>
                   <groupId>io.netty</groupId>
                   <artifactId>netty-handler-proxy</artifactId>
                   <version>${netty.version}</version>
           </dependency>
           <dependency>
                   <groupId>io.netty</groupId>
                   <artifactId>netty-resolver</artifactId>
                   <version>${netty.version}</version>
           </dependency>
           <dependency>
                   <groupId>io.netty</groupId>
                   <artifactId>netty-resolver-dns</artifactId>
                   <version>${netty.version}</version>
           </dependency>
           <dependency>
                   <groupId>io.netty</groupId>
                   <artifactId>netty-transport</artifactId>
                   <version>${netty.version}</version>
           </dependency>
           <dependency>
                   <groupId>io.netty</groupId>
                   <artifactId>netty-codec</artifactId>
                   <version>${netty.version}</version>
           </dependency>
           <dependency>
                   <groupId>io.netty</groupId>
                   <artifactId>netty-codec-dns</artifactId>
                   <version>${netty.version}</version>
           </dependency>
           <dependency>
                   <groupId>io.netty</groupId>
                   <artifactId>netty-codec-http</artifactId>
                   <version>${netty.version}</version>
           </dependency>
           <dependency>
                   <groupId>io.netty</groupId>
                   <artifactId>netty-codec-socks</artifactId>
                   <version>${netty.version}</version>
           </dependency>
     </dependencies>
</project>
           
           
           
           
           
           
           
           
           
           
           
           
           
           
           
           
           